# sfl

./: .bazelrc  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  MODULE.bazel  README.md  README.zh-CN.md  pdm_build.py  pyproject.toml  pytest.ini
.circleci/: config.yml  continue-config.yml  release-config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  publish_pypi.yml  publish_testpypi.yml  scorecards.yml  sfl-lite-ci.yml
benchmark/: __init__.py
benchmark/autoattack/: base.py  benchmark.py  global_config.py  main.py
benchmark/autoattack/applications/: base.py
benchmark/autoattack/attacks/: __init__.py  base.py  batch_lia.py  exploit.py  fia.py  fsha.py  grad_lia.py  lia.py  norm.py  replace.py  replay.py  sdar.py  sim_lia.py
benchmark/autoattack/defenses/: __init__.py  base.py  cae.py  de_identification.py  fed_pass.py  grad_avg.py  loss_defense.py  mid.py  mixup.py
benchmark/autoattack/utils/: config.py  data_utils.py  dispatch.py  monitor.py  resources.py  supported.py  sync_globals.py  timer.py
docs/: CONTRIBUTING.md  Makefile  clean.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/developer/: index.rst
docs/developer/design/: agg_laryer.md  fed_callbacks.md
docs/getting_started/: index.rst  installation.md
docs/tutorial/: Custom_Loss_Federated_Learning_with_Pytorch.ipynb  Federate_Learning_for_Image_Classification.ipynb  Federated_Learning_with_Pytorch_backend.ipynb  Federated_Xgboost.ipynb  Pytorch-finetune-alexnet.ipynb  SL_Training_with_compressor.ipynb  SecureBoost.ipynb  Split_Learning_for_bank_marketing.ipynb  Transforming_SingleModel_to_SecretFlow_Federated_Learning.ipynb  index.rst  secureboost_analysis.ipynb  split_learning_gnn.ipynb  tensorflow-finetune-inception-v3.ipynb
docs/user_guide/: index.rst
docs/user_guide/federated_learning/: how_to_use_gpu_in_fl.md
examples/security/h_bd/: agg_flame.py  agg_freqfed.py  agg_mars.py  backdoor_fl_torch.py  fl_model_bd.py  fl_model_freqbd.py  freqbackdoor_fl_torch.py
examples/security/v_back/: create_bd.py  inversion_backdoor.py  main34.py  main50.py  resnet34.py  resnet50.py  testmodel.py  trainBDmodel.py  trainconnect.py
examples/security/v_mia/: attack.py  export.py  main.py
examples/security/v_tpa/: config.py  test_sl_model_agg.py  test_sl_model_coae.py  test_sl_model_gamma.py  test_sl_model_layer.py  test_sl_model_parties.py  test_sl_model_replay.py  test_sl_model_targets.py
libsfl/binding/: BUILD.bazel  random.cc  random_test.py
secretflow_fl/: op_strategy.py
secretflow_fl/distributed/: __init__.py  op_strategy.py
sfl/: __init__.py  version.py
sfl/component/: __init__.py
sfl/data/horizontal/: sampler.py
sfl/device/: __init__.py  link.py
sfl/distributed/: __init__.py  op_strategy.py
sfl/ic/: README.md
sfl/ic/handler/: __init__.py  handler.py  sgb_handler.py  util.py
sfl/ic/proxy/: __init__.py  link_proxy.py  serializer.py
sfl/ic/remote/: __init__.py  api.py  call_holder.py  ic_object.py  remote_class.py  remote_function.py  remote_test.py  util.py
sfl/ic/runner/: __init__.py  runner.py
sfl/ml/nn/: __init__.py  metrics.py  utils.py
sfl/preprocessing/: __init__.py  cond_filter_v.py  discretization.py  encoder_fl.py  scaler_fl.py  transformer.py
sfl/preprocessing/binning/: homo_binning.py  homo_binning_base.py
sfl/security/: __init__.py
sfl/security/aggregation/: __init__.py  sparse_plain_aggregator.py  stateful_fedgen_aggregator.py
sfl/security/privacy/: __init__.py  strategy.py  strategy_fl.py
sfl/security/random/: __init__.py  distrbutions.py
sfl/tune/: __init__.py  result.py  result_grid.py  train.py  tune_config.py  tuner.py
sfl/tune/schedular/: __init__.py
sfl/tune/search/: __init__.py  search_algorithm.py  variant_generator.py
sfl/tune/trainable/: __init__.py  util.py
sfl/utils/: ray_compatibility.py
sfl/utils/compressor/: __init__.py  base.py  mixed_compressor.py  quantized_compressor.py  sparse_compressor.py
sfl/utils/simulation/: datasets_fl.py  tf_gnn_model.py
sfl_lite/: .gitignore  .pre-commit-config.yaml  CI_SETUP.md  CLAUDE.md  DEVELOPMENT.md  README.md  __init__.py  design.md  format.sh  pyproject.toml
sfl_lite/ml/linear/: linear_model.py  linear_regression_vertical.py
sfl_lite/security/aggregation/: __init__.py  aggregator.py  mp_aggregator.py
sfl_lite/sfl_lite/: __init__.py  mplang_error_guide.md
sfl_lite/sfl_lite/ml/linear/: linear_model.py  linear_regression_vertical.py  plain_fed_linear_model.py
sfl_lite/sfl_lite/ml/linear_model/: plain_fed.py
sfl_lite/sfl_lite/ml/linear_model/linear_regression/core/: __init__.py  functional.py  model.py  template.py
sfl_lite/sfl_lite/ml/nn/: __init__.py  base_model.py  models.py
sfl_lite/sfl_lite/ml/nn/sl/: sl_model.py
sfl_lite/sfl_lite/security/aggregation/: __init__.py  aggregator.py  mp_aggregator.py
sfl_lite/tests/: __init__.py  conftest.py  test_base_models.py  test_linear_model.py  test_linear_vertical.py  test_linear_vertical_plain_fed.py  test_models.py  test_mp_aggregator.py  test_utils.py  utils.py
tests/: __init__.py  conftest.py  sf_config.py  sf_fixtures.py  sf_services.py
tests/component/nn/: model_def.py  test_compile.py  test_sandbox.py  test_sl_nn.py  test_training.py
tests/device/: test_link.py  test_spu_kernel.py
tests/ml/homo_boost/: gen_data.py  test_criterion.py  test_feature_histogram.py  test_feature_importance.py  test_local_decision_tree.py  test_sf_xgboost.py  test_splitter.py
tests/preprocessing/: test_cond_filter_v.py  test_discretizer.py  test_encoder.py  test_encoder_polars.py  test_function_transformer.py  test_function_transformer_polars.py  test_homo_binning.py  test_minmax_scaler.py  test_minmax_scaler_polars.py
tests/security/: __init__.py
tests/security/aggregation/: test_aggregator_base.py  test_ppb_aggregator.py  (+1 more)
tests/tuner/: test_auto_attacks.py  test_auto_ml_sl.py  test_tuner.py
tests/utils/: auth_manager.py  test_bigint_ndarray.py  test_cloudpickle.py  test_compressor.py  test_secure_pickle.py  test_sigmoid.py
(+436 files in other folders)
