module(
    name = "sfl",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "yacl", version = "0.4.5b10-nightly-20250110")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = true,
    python_version = "3.10",
)
